syntax = "proto3";

package services.baemincrypto.v1;

option go_package = "github.com/taehoio/idl/gen/go/services/baemincryptov1";
option java_multiple_files = true;
option java_outer_classname = "BaemincryptoProto";
option java_package = "com.github.taehoio.idl.services.baemincrypto.v1";

import "google/api/annotations.proto";

service BaemincryptoService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/baemincrypto/v1/health"
    };
  }
  rpc EncryptUserBaedalHeaderValue(EncryptUserBaedalHeaderValueRequest) returns (EncryptUserBaedalHeaderValueResponse) {
      option (google.api.http) = {
          post: "/baemincrypto/v1/user-baedal-header/encrypt"
          body: "*"
      };
  }
  rpc DecryptUserBaedalHeaderValue(DecryptUserBaedalHeaderValueRequest) returns (DecryptUserBaedalHeaderValueResponse) {
      option (google.api.http) = {
          post: "/baemincrypto/v1/user-baedal-header/decrypt"
          body: "*"
      };
  }
}

message HealthCheckRequest {}

message HealthCheckResponse {}

message EncryptUserBaedalHeaderValueRequest {
  string input_text = 1;
}

message EncryptUserBaedalHeaderValueResponse {
  string encrypted_text = 1;
}

message DecryptUserBaedalHeaderValueRequest {
  string encrypted_text = 1;
}

message DecryptUserBaedalHeaderValueResponse {
  string decrypted_text = 1;
}
